# log-resolver-rs

./: .env  Cargo.toml  log_example.txt
migrations/2025-04-30-014111_init/: down.sql  up.sql
src/: configuration.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs  schema.rs  util.rs
src/dao/: log_parser_field_dao.rs  log_parser_pattern_dao.rs  log_parser_rule_dao.rs  mod.rs  post.rs  subsys_log_parser_config_dao.rs  sys_subsys_config_dao.rs
src/parser/: parse_rule.rs
