[package]
name = "log-resolver-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
regex = "1.11.1"
time = { version = "0.3.41", features = ["macros"] }
diesel = { version = "2.2.10", features = ["mysql"] }
# build libmysqlclient as part of the build process
# uncomment this line if you run into setup issues
# mysqlclient-sys = { version = "0.4", features = ["bundled"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
